[tool.poetry]
name = "pmg-csv-combiner"
version = "0.1.0"
description = ""
authors = ["Flora-0707 <florawang.smile@gmail.com>"]
readme = "README.md"
packages = [{include = "pmg_csv_combiner"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
